Fix transitions on iOS

--- a/story/style.css
+++ b/story/style.css
@@ -100,6 +100,7 @@ body {
 }
 
 .chapter {
+  left: 100%;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -108,6 +109,8 @@ body {
   padding-top: 5vh;
   padding-bottom: 1vh;
   padding-right: 5vw;
+  -webkit-transition: left 0.5s;
+  transition: left 0.5s;
 }
 
 .arrows {
